# gitmine-tty

./: README.md
.github/workflows/: deploy.yml  pool.yml
config/: payouts.yaml  pool.yaml  server.yaml
docs/: config.json  index.html  manifest.json  payouts.json  stats.json  sw.js  template.json
pool-server/: Cargo.toml
pool-server/src/: config.rs  db.rs  jobs.rs  main.rs  protocol.rs  server.rs  shares.rs  vardiff.rs
relay/: README.md  bridge.py  client.js  gitmine-relay.service
scripts/: build-trinityd.sh
supabase/: schema.sql
