[package]
name = "gitmine-pool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gitmine-pool"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dashmap = "5"
bytes = "1"
